added new resources

--- a/resources/21693536.md
+++ b/resources/21693536.md
@@ -3,3 +3,14 @@
 ### Abstract 
 Process mining technology can extract process knowledge from event logs that are generated from information systems. It can construct a process model by mining the event logs. The model usually needs to be repaired to accurately describe the business process realized by the information system. The existing methods for repairing process models cannot enhance efficiently some model consistency metrics, such as the fitness, precision, and simplicity. Thus, a new model repair approach is proposed based on an extended Petri net named logic Petri net in this paper. It can improve the model's fitness and precision comparing with the existing work. First, it builds process models via logic Petri nets. Next, approaches are proposed to repair the process models containing a causal relation and a concurrent relation, respectively. Specifically, a precursor set and a successor set of activities are defined and the relation of the elements in each of them is determined. Finally, we give some cases related to a thoracic surgery process in a hospital and conduct experiments to illustrate the correctness and effectiveness of the proposed approach.
 
+existing model repair approaches ensure a good simplicity but fail to get high fitness values. They cannot enhance other consistency quality metrics, such as generalization adn precision. The existing approaches usually collect some sub-logs and sub-processes.
+
+This paper employs the *divide and concour idea.*
+
+Define a causal relation and a concurrent relation for the process models. 
+> causal relation: if the occurance of the first causes the other
+>concurrent relation: happening at the same time?
+
+In order to confirm where the deviations appear in process model, we propose a new approach by identifying new activities
+
+The proposed approaches can repair process models with the causality and concurrent realtions, respectivel. Specifically,we define a precursor set and a successor set of the activities, and the relations among the activiteis in each set. We can construct the logic relation functions. 
