--- a/My Collection.bib
+++ b/My Collection.bib
@@ -546,6 +546,19 @@ title = {{Lecture Notes in Computer Science: Preface}},
 volume = {5477},
 year = {2009}
 }
+@book{Reisig1995,
+author = {Reisig, Wolfgang and Techniques, Modeling and Methods, Analysis and Studies, Case},
+booktitle = {IEEE Parallel and Distributed Technology},
+doi = {10.1109/M-PDT.1995.414862},
+file = {:Users/hermanplatou/code/private/Masters/Masters{\_}Literature/2013{\_}Book{\_}UnderstandingPetriNets.pdf:pdf},
+isbn = {9783642332777},
+issn = {10636552},
+number = {3},
+pages = {54--55},
+title = {{Understanding Petri nets}},
+volume = {3},
+year = {1995}
+}
 @article{Jensen2015,
 author = {Jensen, Kurt and Kristensen, Lars M.},
 doi = {10.1145/2663340},
